ezyplot-x1/force-app/main/default/objects/BO_LR_Leasehold__b/BO_LR_Leasehold__b.object-meta.xml
<CustomObject>
    <label>BO_LR_Leasehold</label>
    <pluralLabel>BO_LR_Leaseholds</pluralLabel>
</CustomObject>