ezyplot-x1/force-app/main/default/objects/BO_LR_Leasehold__b/fields/LengthOfLease__c.field-meta.xml
<CustomField>
    <fullName>LengthOfLease__c</fullName>
    <description>Derivative from LR_Term in YEARS</description>
    <inlineHelpText>Derivative from LR_Term in YEARS</inlineHelpText>
    <label>LengthOfLease</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>