ezyplot-x1/force-app/main/default/objects/BO_LR_Leasehold__b/fields/LR__c.field-meta.xml
<CustomField>
    <fullName>LR__c</fullName>
    <description>LR: Associated Property Description ID</description>
    <label>LR_Assoc_ID</label>
    <length>29</length>
    <type>Text</type>
</CustomField>