ezyplot-x1/force-app/main/default/objects/BO_LR_Leasehold__b/fields/LR_Alienation__c.field-meta.xml
<CustomField>
    <fullName>LR_Alienation__c</fullName>
    <description>LR: Alienation Clause Indicator</description>
    <label>LR_Alienation</label>
    <length>9</length>
    <type>Text</type>
</CustomField>