ezyplot-x1/force-app/main/default/objects/BO_LR_Leasehold__b/fields/LR_Assoc_Description__c.field-meta.xml
<CustomField>
    <fullName>LR_Assoc_Description__c</fullName>
    <description>LR: Associated Property Description</description>
    <label>LR_Assoc_Description</label>
    <length>99</length>
    <type>Text</type>
</CustomField>