ezyplot-x1/force-app/main/default/objects/BO_LR_Leasehold__b/fields/LR_County__c.field-meta.xml
<CustomField>
    <fullName>LR_County__c</fullName>
    <description>LR: County</description>
    <label>LR_County</label>
    <length>29</length>
    <type>Text</type>
</CustomField>