ezyplot-x1/force-app/main/default/objects/BO_LR_Leasehold__b/fields/LR_DateOfLease__c.field-meta.xml
<CustomField>
    <fullName>LR_DateOfLease__c</fullName>
    <description>LR: Date of Lease</description>
    <label>LR_DateOfLease</label>
    <length>29</length>
    <type>Text</type>
</CustomField>