ezyplot-x1/force-app/main/default/objects/BO_LR_Leasehold__b/fields/LR_Description__c.field-meta.xml
<CustomField>
    <fullName>LR_Description__c</fullName>
    <description>LR: Unique Identifier</description>
    <label>LR_Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>