ezyplot-x1/force-app/main/default/objects/BO_LR_Leasehold__b/fields/LR_ID__c.field-meta.xml
<CustomField>
    <fullName>LR_ID__c</fullName>
    <description>LR: Unique Identifier</description>
    <label>LR_ID</label>
    <length>29</length>
    <required>true</required>
    <type>Text</type>
</CustomField>