ezyplot-x1/force-app/main/default/objects/BO_LR_Leasehold__b/fields/LR_OS_UPRN__c.field-meta.xml
<CustomField>
    <fullName>LR_OS_UPRN__c</fullName>
    <description>LR: OS UPRN</description>
    <label>LR_OS_UPRN</label>
    <length>29</length>
    <type>Text</type>
</CustomField>