ezyplot-x1/force-app/main/default/objects/BO_LR_Leasehold__b/fields/LR_PricePaid__c.field-meta.xml
<CustomField>
    <fullName>LR_PricePaid__c</fullName>
    <description>LR: Price Paid</description>
    <label>LR_PricePaid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>