ezyplot-x1/force-app/main/default/objects/BO_LR_Leasehold__b/fields/LR_Reg_Order__c.field-meta.xml
<CustomField>
    <fullName>LR_Reg_Order__c</fullName>
    <description>LR: Reg Order</description>
    <label>LR_Reg_Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>