ezyplot-x1/force-app/main/default/objects/BO_LR_Leasehold__b/fields/LR_Region__c.field-meta.xml
<CustomField>
    <fullName>LR_Region__c</fullName>
    <description>LR: Region</description>
    <label>LR_Region</label>
    <length>29</length>
    <type>Text</type>
</CustomField>