ezyplot-x1/force-app/main/default/objects/BO_LR_Leasehold__b/fields/LR_Term__c.field-meta.xml
<CustomField>
    <fullName>LR_Term__c</fullName>
    <description>LR: Term</description>
    <label>LR_Term</label>
    <length>29</length>
    <type>Text</type>
</CustomField>