ezyplot-x1/force-app/main/default/objects/BO_LR_Leasehold__b/fields/StartOfLease__c.field-meta.xml
<CustomField>
    <fullName>StartOfLease__c</fullName>
    <description>Derivative from LR_Term</description>
    <inlineHelpText>Derivative from LR_Term</inlineHelpText>
    <label>StartOfLease</label>
    <type>DateTime</type>
</CustomField>